package labyrinth.server.game.enums;

public enum Achievement {
    BLOCKER,
    PUSHER,
    RUNNER
}
